setup components and root configurations

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,14 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="pt-BR">
 <head>
-  <meta charset="utf-8">
-  <title>FrontParcelandotudo</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta charset="utf-8" />
+  <title>Parcelando Tudo - Consulta de Boleto</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- Fonte sans-serif (Inter & Poppins) -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+  <!-- Ícones Font Awesome (para cadeado, relógio, WhatsApp, etc.) -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha384-a/B/C" crossorigin="anonymous" />
 </head>
 <body>
   <app-root></app-root>
