--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <title>Parcelando Tudo - Consulta de Boleto</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <base href="/" />
   <!-- Fonte sans-serif (Inter & Poppins) -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
